--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -95,13 +95,12 @@ The views and opinions of authors expressed herein do not necessarily state or r
 \input{formal/formal}
 \input{alias/alias}
 \input{bitr/BiTR-0}
-\input{tachyon/tachyon}
 \input{conclusion}
 
 \backmatter
 %\singlespacing
 \renewcommand{\bibsection}{\chapter{\bibname}}
 \bibliographystyle{plain}
-\bibliography{thesis,bitr/BiTR-0,tachyon/tachyon}
+\bibliography{thesis,bitr/BiTR-0}
 
 \end{document}
