--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -138,7 +138,7 @@
 @misc{juliet,
   title = {Juliet {{Test Suite}} (1.3)},
   shorttitle = {Juliet},
-  publisher = {{NIST, NSA}}
+  howpublished = {NIST, NSA}
 }
 
 @article{angr-sok,
@@ -265,6 +265,7 @@
 @inproceedings{lftj,
   title = {Leapfrog Triejoin: {{A}} Simple, Worst-Case Optimal Join Algorithm},
   shorttitle = {Leapfrog Triejoin},
+  booktitle = {{{ICDT}}},
   author = {Veldhuizen, Todd L.},
   year = {2014},
   file = {/home/maurer/Zotero/storage/ISCNF28J/Veldhuizen14.pdf}
@@ -718,17 +719,6 @@
   file = {/home/maurer/Zotero/storage/DELD7PHL/Gelfond and Lifschitz - 1988 - The stable model semantics for logic programming..pdf;/home/maurer/Zotero/storage/G3PULW6U/Gelfond and Lifschitz - 1988 - The stable model semantics for logic programming..pdf}
 }
 
-@article{wellfounded,
-  title = {The Well-Founded Semantics for General Logic Programs},
-  volume = {38},
-  number = {3},
-  journal = {Journal of the ACM (JACM)},
-  author = {Van Gelder, Allen and Ross, Kenneth A. and Schlipf, John S.},
-  year = {1991},
-  pages = {619--649},
-  file = {/home/maurer/Zotero/storage/9MSTBAYL/Van Gelder et al. - 1991 - The well-founded semantics for general logic progr.pdf;/home/maurer/Zotero/storage/4Q82B5ZI/citation.html}
-}
-
 @inproceedings{wf-agg,
   title = {The Well-Founded Semantics of Aggregation},
   booktitle = {Proceedings of the Eleventh {{ACM SIGACT}}-{{SIGMOD}}-{{SIGART}} Symposium on {{Principles}} of Database Systems},
@@ -761,6 +751,43 @@
   year = {2014},
   keywords = {Computer Science - Data Structures and Algorithms,Computer Science - Databases},
   file = {/home/maurer/Zotero/storage/454PGLCB/Khamis et al. - 2014 - Joins via Geometric Resolutions Worst-case and Be.pdf;/home/maurer/Zotero/storage/87K9B2QL/1404.html}
+}
+
+@inproceedings{stablemodel,
+  title = {The {{Stable Model Semantics For Logic Programming}}},
+  abstract = {We propose a new declarative semantics for logic programs with negation. Its formulation is quite simple; at the same time, it is more general than the iterated fixed point semantics for stratied programs, and is applicable to some useful programs that are not stratified.},
+  publisher = {{MIT Press}},
+  author = {Gelfond, Michael and Lifschitz, Vladimir},
+  year = {1988},
+  pages = {1070--1080},
+  file = {/home/maurer/Zotero/storage/ZT8IZWEK/Gelfond and Lifschitz - 1988 - The Stable Model Semantics For Logic Programming.pdf;/home/maurer/Zotero/storage/H9GVYD7L/summary.html}
+}
+
+@inproceedings{wellfounded,
+  address = {New York, NY, USA},
+  series = {PODS '88},
+  title = {Unfounded {{Sets}} and {{Well}}-Founded {{Semantics}} for {{General Logic Programs}}},
+  isbn = {978-0-89791-263-1},
+  doi = {10.1145/308386.308444},
+  abstract = {A general logic program (abbreviated to ``program'' hereafter) is a set of rules that have both positive and negative subgoals. It is common to view a deductive database as a general logic program consisting of rules (IDB) sitting above elementary relations (EDB, facts). It is desirable to associate one Herbrand model with a program and think of that model as the ``meaning of the program,'' or its ``declarative semantics.'' Ideally, queries directed to the program would be answered in accordance with this model. We introduce unfounded sets and well-founded partial models, and define the well-founded semantics of a program to be its well-founded partial model. If the well-founded partial model is in fact a model, we call it the well-founded model, and say the program is ``well-behaved''. We show that the class of well-behaved programs properly includes previously studied classes of ``stratified'' and ``locally stratified'' programs Gelfand and Lifschits have proposed a definition of ``unique stable model'' for general logic programs. We show that a program has a unique stable model if it has a well-founded model, in which case they are the same. We discuss why the converse is not true.},
+  booktitle = {Proceedings of the {{Seventh ACM SIGACT}}-{{SIGMOD}}-{{SIGART Symposium}} on {{Principles}} of {{Database Systems}}},
+  publisher = {{ACM}},
+  author = {Van Gelder, Allen and Ross, Kenneth and Schlipf, John S.},
+  year = {1988},
+  pages = {221--230},
+  file = {/home/maurer/Zotero/storage/W35JU3Z2/Van Gelder et al. - 1988 - Unfounded Sets and Well-founded Semantics for Gene.pdf}
+}
+
+@incollection{strongneg,
+  address = {Cambridge, MA, USA},
+  title = {Logic {{Programming}}},
+  isbn = {978-0-262-73090-7},
+  publisher = {{MIT Press}},
+  author = {Gelfond, Michael and Lifschitz, Vladimir},
+  editor = {Warren, David H.D. and Szeredi, Peter},
+  year = {1990},
+  pages = {579--597},
+  file = {/home/maurer/Zotero/storage/X6DBJXWF/newgen.pdf}
 }
 
 
